# bazel-hello-world

./: BUILD.bazel  WORKSPACE  package.json  tsconfig.json
backend/: BUILD.bazel  index.ts  package.json
e2e-docker-image/: BUILD.bazel
e2e-test/: BUILD.bazel  docker-compose.yml  index.ts  package.json  runner.bzl
tools/: BUILD.bazel  load-images.sh.tpl  runner.bzl
