load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
package(default_visibility = ["//visibility:public"])

ts_library(
    name = "main",
    tsconfig = "//:tsconfig.json",
    srcs = ["index.ts"],
    node_modules = "@npm_backend//typescript:typescript__typings",
    deps = [
        "@npm_backend//@types/express",
        "@npm_backend//express",
    ],
)

filegroup(
    name = "index.js",
    srcs = ["main"],
    output_group = "es5_sources",
)

nodejs_binary(
    name = "bin",
    data = [":main"],
    entry_point = ":index.ts",
)