load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load(
    "@io_bazel_rules_docker//nodejs:image.bzl", 
    "nodejs_image",
)
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "main",
    tsconfig = "//:tsconfig.json",
    srcs = ["index.ts"],
    node_modules = "@npm_backend//typescript:typescript__typings",
    deps = [
        "@npm_backend//@types/express",
        "@npm_backend//express",
    ],
)

nodejs_binary(
    name = "bin",
    data = [":main"],
    entry_point = ":index.ts",
)

container_image(
    name = "base_image",
    base = "@nodejs_image_base//image",
    ports = ["3000/tcp"],
)

nodejs_image(
    name = "docker_image",
    entry_point = "//backend:index.ts",
    data = ["//backend:main"],
    # Override the base image.
    base = ":base_image",
)