load("@npm_e2e-test//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")
load("//tools:runner.bzl", "docker_compose_test")
load(
    "@io_bazel_rules_docker//nodejs:image.bzl", 
    "nodejs_image",
)
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_load",
)



package(default_visibility = ["//visibility:public"])

ts_library(
    name = "main",
    tsconfig = "//:tsconfig.json",
    srcs = ["index.ts"],
    deps = [
        "@npm_e2e-test//@types/mocha",
        "@npm_e2e-test//@types/chai",
        "@npm_e2e-test//@types/chai-http",
        "@npm_e2e-test//mocha",
        "@npm_e2e-test//chai",
        "@npm_e2e-test//chai-http",
    ],
)

nodejs_test(
    name = "bin",
    entry_point = "@npm_e2e-test//:node_modules/mocha/bin/mocha",
    args = [package_name() + "/index.js"],
    data = [":main"],
)

container_image(
    name = "base_image",
    base = "@nodejs_image_base//image",
    env = {"BACKEND_BASE_URL": "http://backend:3000"}
)

nodejs_image(
    name = "docker",
    entry_point = "@npm_e2e-test//:node_modules/mocha/bin/mocha",
    args = [package_name() + "/index.js"],
    data = [":main"],
    # Override the base image.
    base = ":base_image",
)

docker_compose_test(
    name = "lines",
    images = {
        "e2e-tests-runner" : ":docker",
        "backend" : "//e2e-docker-image:nodejs_image",
        },
    compose_file = "docker-compose.yml"
)