load("@npm_e2e-test//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")
load("//tools:runner.bzl", "docker_compose_test")
load(
    "@io_bazel_rules_docker//nodejs:image.bzl", 
    "nodejs_image",
)
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "javascript",
    tsconfig = "//:tsconfig.json",
    srcs = ["index.ts"],
    deps = [
        "@npm_e2e-test//@types/mocha",
        "@npm_e2e-test//@types/chai",
        "@npm_e2e-test//@types/chai-http",
        "@npm_e2e-test//mocha",
        "@npm_e2e-test//chai",
        "@npm_e2e-test//chai-http",
    ],
)

container_image(
    name = "base_image",
    base = "@nodejs_image_base//image",
    env = {"BACKEND_BASE_URL": "http://backend:3000"}
)

nodejs_image(
    name = "docker_image",
    entry_point = "@npm_e2e-test//:node_modules/mocha/bin/mocha",
    args = [package_name() + "/index.js"],
    data = [":javascript"],
    # Override the base image.
    base = ":base_image",
)

docker_compose_test(
    name = "lines",
    images = {
        "e2e-tests-runner" : ":docker_image",
        "backend" : "//backend:docker_image",
        },
    compose_file = "docker-compose.yml"
)